package model.game.ship;

public abstract class FleetFactory {
}
