package model.game.ship;

public class ModernFleet {
}
